# memcp

./: .gitignore  .perf_baseline.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  ai_example.go  ai_optimizer.py  ai_training.py  bench.scm  bench_complex.scm  git-pre-commit  go.mod  go.sum  info  jit-todo.md  jit_probe.scm  jit_probe2.scm  jit_probe3.scm  jitdebug.scm  jitdebug2.scm  main.go  main_virtualpath_test.go  memcp.service  memcp.singularity.recipe  memcp.spec  probe_fallback.scm  probe_opt.scm  probe_plain.scm  run_sql_tests.py  run_tests_unbuffered.py  test_memcp_api.py  test_tpl.scm  todo.md  unnesting.md  watch-memcp.sh
apps/: bayesian.scm  keyvalue.scm  minigame.scm
assets/: dashboard.html  demo.html  index.html  info.html
debian/: memcp.conf.default  postinst  postrm  prerm
docs/: arithmetic--logic.md  associative-lists--dictionaries.md  date.md  engine-semantics.md  index.md  io.md  lists.md  parsers.md  performance-tests.md  scm-builtins.md  storage.md  streams.md  strings.md  sync.md  vectors.md
experiments/: mdb.cpp  sparql.js
go-impl/: main.go  scm.go
lib/: dashboard.scm  main.scm  psql-parser.scm  queryplan-debug.scm  queryplan-legacy-bridges.scm  queryplan-prejoin.scm  queryplan-tree-ir.scm  queryplan.scm  rdf-parser.scm  rdf.scm  sql-builtins.scm  sql-metadata.scm  sql-parser.scm  sql-test.scm  sql.scm  test.scm
php/: experiment.go  plugin.go
scm/: alu.go  assoc_fast.go  compare.go  date.go  declare.go  jit.go  jit_amd64.go  jit_arm64.go  jit_emit_amd64.go  jit_entry.go  jit_interface.go  (+38 more)
(+340 files in other folders)
